--- a/customer-backend/src/main/resources/application.properties
+++ b/customer-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo
-spring.datasource.username=postgres
-spring.datasource.password=2865428
+spring.datasource.url=jdbc:postgresql://rogue.db.elephantsql.com:5432/knowqmlq
+spring.datasource.username= knowqmlq
+spring.datasource.password= 9V5sFbmUzBvpAWDDz_w-NB080pspoVik
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 server.error.whitelabel.enabled=false
 
