--- a/customer-ui/package.json
+++ b/customer-ui/package.json
@@ -9,11 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
+    "pg": "^8.5.1",
+    "sequelize": "^6.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "bootstrap-vue": "^2.20.1"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
